--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "buffer-equals": "^1.0.3",
+    "collect-stream": "^1.0.0",
     "hyperlog": "^4.5.0",
-    "hyperlog-index": "^2.0.0",
+    "hyperlog-index": "^2.1.0",
     "isarray": "~0.0.1",
+    "once": "^1.3.2",
     "read-only-stream": "^1.1.1",
     "sodium": "^1.0.21",
     "sodium-browserify": "~0.0.0",
