--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "buffer-equals": "^1.0.3",
     "collect-stream": "^1.0.0",
+    "defined": "^1.0.0",
     "hyperlog": "^4.5.0",
-    "hyperlog-index": "^2.1.0",
+    "hyperlog-index": "^3.0.0",
     "isarray": "~0.0.1",
     "once": "^1.3.2",
     "read-only-stream": "^1.1.1",
