--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "collect-stream": "^1.0.0",
     "concat-map": "0.0.1",
     "defined": "^1.0.0",
+    "duplexify": "^3.4.2",
     "hyperlog": "^4.5.0",
-    "hyperlog-index": "^3.0.0",
+    "hyperlog-index": "^3.1.0",
     "isarray": "~0.0.1",
     "once": "^1.3.2",
     "read-only-stream": "^1.1.1",
@@ -18,11 +19,8 @@
   },
   "devDependencies": {
     "sodium": "^1.0.21",
-    "sodium-browserify": "~0.0.0",
     "hyperlog-sodium": "^1.1.0",
-    "level": "^1.3.0",
     "memdb": "^1.0.1",
-    "minimist": "^1.1.3",
     "tape": "^4.0.3"
   },
   "scripts": {
